--- a/css/style.css
+++ b/css/style.css
@@ -2531,6 +2531,14 @@ select:focus {
     scroll-margin-top: 8vh;
 }
 
+#dsi,
+#pct,
+#pcb,
+#pcu,
+#pcc {
+    scroll-margin-top: 25vh;
+}
+
 #context,
 #identify,
 #icons,
@@ -2661,7 +2669,7 @@ h2.page-title {
 .wbnrfz_eicw {
     background: #e9eae5;
     backdrop-filter: blur(10px);
-    padding-top: 3em;
+    padding-top: 1em;
     padding-bottom: 2em;
 }
 
@@ -2797,6 +2805,78 @@ md-menu {
 }
 
 .form-control::placeholder {
-  color: #aaaaaa; /* Red color example */
-  opacity: 1; /* Ensure full opacity if desired, as some browsers default to lower opacity */
+    color: #aaaaaa;
+    /* Red color example */
+    opacity: 1;
+    /* Ensure full opacity if desired, as some browsers default to lower opacity */
+}
+
+
+
+
+
+/* ------------------------------------------ xx.x Tabs Controls ------------------------------------------ */
+
+.wrapper {
+    text-align: center;
+    margin: 50px auto;
+}
+
+.tabs {
+    font-size: 15px;
+    padding: 0px;
+    list-style: none;
+    background: #fff;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    display: inline-block;
+    border-radius: 25px;
+    position: relative;
+    z-index: 1;
+    padding: 10px;
+}
+
+.tabs a {
+    text-decoration: none;
+    color: #777;
+    padding: 10px 20px;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+    transition-duration: 0.6s;
+}
+
+.tabs a img,
+.tabs a i {
+    display: inline;
+    max-height: 13px;
+    margin-right: 5px;
+}
+
+.tabs a.active {
+    color: #fff;
+}
+
+.tabs .selector {
+    height: 100%;
+    display: inline-block;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+    border-radius: 25px;
+ transition: all 0.4s ease-in-out; /* Updated for smoother animation */
+    background: #0c0c0c;
+    background: linear-gradient(90deg, #de650f 0%, #fd1d1d 50%, #df9e43 100%);
+    box-shadow: 0px 2px 10px rgba(14, 14, 14, 0.151);
+}
+
+.tab-body>section {
+    /* border: 1px solid grey; */
+    background-color: white;
+    padding-top: 10vmin;
+    display: none;
+}
+
+.tab-body>section:first-child {
+    display: block;
 }
