--- a/css/style.css
+++ b/css/style.css
@@ -2536,7 +2536,7 @@ select:focus {
 #pcb,
 #pcu,
 #pcc {
-    scroll-margin-top: 25vh;
+    scroll-margin-top: 35vh;
 }
 
 #context,
@@ -2826,8 +2826,8 @@ md-menu {
     font-size: 15px;
     padding: 0px;
     list-style: none;
-    background: #fff;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    /* background: #fff;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); */
     display: inline-block;
     border-radius: 25px;
     position: relative;
@@ -2835,14 +2835,25 @@ md-menu {
     padding: 10px;
 }
 
-.tabs a {
+.tabs .normal {
     text-decoration: none;
     color: #777;
     padding: 10px 20px;
     display: inline-block;
     position: relative;
     z-index: 2;
-    transition-duration: 0.6s;
+    background: #fff;
+    border-radius: 25px;
+}
+
+.tabs a {
+    text-decoration: none;
+    color: #777;
+    padding: 10px 20px;
+    margin: 10px;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
 }
 
 .tabs a img,
@@ -2852,24 +2863,33 @@ md-menu {
     margin-right: 5px;
 }
 
-.tabs a.active {
-    color: #fff;
-}
-
 .tabs .selector {
     height: 100%;
     display: inline-block;
     position: absolute;
     left: 0px;
     top: 0px;
-    z-index: 1;
+    z-index: 1; /* Lower z-index to ensure text appears on top */
     border-radius: 25px;
- transition: all 0.4s ease-in-out; /* Updated for smoother animation */
-    background: #0c0c0c;
     background: linear-gradient(90deg, #de650f 0%, #fd1d1d 50%, #df9e43 100%);
     box-shadow: 0px 2px 10px rgba(14, 14, 14, 0.151);
+    margin: 10px;
 }
 
+.tabs a {
+    text-decoration: none;
+    color: #777;
+    padding: 10px 20px;
+    margin: 10px;
+    display: inline-block;
+    position: relative;
+    z-index: 2; /* Higher z-index to ensure text is above the selector */
+}
+
+.tabs a.active {
+    color: #fff;
+    z-index: 3; /* Ensure active tab text is always on top */
+}
 .tab-body>section {
     /* border: 1px solid grey; */
     background-color: white;
