--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -594,24 +594,15 @@ body.dark-mode .form-control::placeholder {
 
 
 /* ------------------------------------------ xx.x Tabs Controls ------------------------------------------ */
-body.dark-mode .tabs a {
-    text-decoration: none;
+body.dark-mode .category-button {
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    background-color: #494949;
     color: #fff;
-    padding: 10px 20px;
+    padding: 15px 28px;
+    border-radius: 50px;
     display: inline-block;
-    position: relative;
-    z-index: 2;
-    transition-duration: 0.6s;
-}
-
-body.dark-mode .tabs .normal {
-    text-decoration: none;
-    color: #fff;
-    padding: 10px 20px;
-    display: inline-block;
-    position: relative;
-    z-index: 2;
-    transition-duration: 0.6s;
-    background: #494949;
-    border-radius: 25px;
+    cursor: pointer;
+    user-select: none;
 }
