XXXX-XX Feature Update for Version Next (6.0.0)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -286,7 +286,7 @@
         display: block;
     }
 
-    .navbar {
+    /* .navbar {
         position: absolute;
         top: 100%;
         left: 0;
@@ -314,7 +314,7 @@
         transition: all 0.3s ease;
         display: block;
         padding: 0;
-    }
+    } */
 
     body.dark-mode .navbar {
         position: absolute;
