--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -50,7 +50,7 @@ body.dark-mode {
     border-radius: 60px;
     transition-duration: 500ms;
     margin-bottom: 0px;
-    margin-top: 5px;
+    margin-top: 0px;
     border: none;
 }
 
@@ -89,17 +89,6 @@ body.dark-mode #hero:before {
     right: 0;
 }
 
-body.dark-mode .bg-overlay::after {
-    position: absolute;
-    content: "";
-    height: 101%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-color: #000000d4;
-    backdrop-filter: blur(5px);
-}
 
 
 body.dark-mode h1,
@@ -628,5 +617,34 @@ body.dark-mode .scrollable-tabs-container svg {
 
 body.dark-mode .scrollable-tabs-container a.active {
     background: linear-gradient(90deg, #de650f 0%, #fd1d1d 50%, #df9e43 100%);
+    color: #fff;
+}
+
+
+
+
+
+
+/* ==================== ADVANCED NAVIGATION BAR ==================== */
+
+body.dark-mode .navbar {
+    background: #07070793;
+    backdrop-filter: blur(25px);
+    border: 1px solid #0c0c0c60;
+    border-radius: 50px;
+    padding: 12px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow:
+        0 20px 40px rgba(0, 0, 0, 0.1),
+        inset 0 1px 0 rgba(31, 31, 31, 0.2);
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    position: relative;
+    overflow: hidden;
+}
+
+
+body.dark-mode .nav-link{
     color: #fff;
 }
